<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    package="com.example.Algorithms"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="Main.">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/enc2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Switch"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:background="@drawable/buttonshape"
        android:onClick="encryptionButtonClick"
        android:text="@string/advanced_encryption_standard"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Key">

        <Button
            android:id="@+id/Encrypt_Button"
            android:layout_width="111dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/buttonshape"
            android:onClick="encryptionButtonClick"
            android:text="@string/encrypt"
            android:textSize="19sp" />

        <ImageView
            android:id="@+id/btn_record"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bear"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="397dp" />


        <Button
            android:id="@+id/Decrypt_Button"
            android:layout_width="111dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/buttonshape"
            android:onClick="encryptionButtonClick"
            android:text="@string/decrypt"
            android:textSize="19sp" />



    </LinearLayout>

    <EditText
        android:id="@+id/TextArea"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:hint="@string/enter_your_message_here"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Switch" />

    <EditText
        android:id="@+id/Key"
        android:layout_width="263dp"
        android:layout_height="66dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:hint="@string/key"
        android:maxLength="30"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextArea" />

    <TextView
        android:id="@+id/Answer"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:hint="@string/your_output_gonna_be_here"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Matrix"
        android:layout_width="225dp"
        android:layout_height="115dp"
        android:layout_marginBottom="158dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:hint="@string/your_matrix_key_gonna_be_here"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Play_Fair_VALUE"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginBottom="98dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:hint="@string/your_output_gonna_be_here"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textSize="15sp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Matrix"
        tools:ignore="TextViewEdits" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/copy_button"
            android:layout_width="111dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/buttonshape"
            android:onClick="encryptionButtonClick"
            android:text="@string/copy"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="111dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/buttonshape"
            android:onClick="encryptionButtonClick"
            android:text="@string/reset"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>